# aoc2023

./: aoc2023.cabal
app/: Main.hs
src/: Day.hs  Day1.hs  Day2.hs  Day4.hs  Day6.hs
